# wormcode

./: Cargo.toml
wormcode_asm/: Cargo.toml
wormcode_asm/src/: arginfo.rs  error.rs  inst.rs  lib.rs  parseb.rs  parseinst.rs  tests.rs
wormcode_asm/src/inst/: bits.rs  parseb.rs  tests.rs  tokenstream.rs
wormcode_asm/src/parseinst/: tests.rs  tokenstream.rs
wormcode_bits/: Cargo.toml
wormcode_bits/src/: codec.rs  debug.rs  lib.rs  tests.rs
wormcode_cell/: Cargo.toml
wormcode_cell/src/: bitpairfields.rs  cell.rs  direction.rs  lib.rs  physics.rs  tests.rs
wormcode_console/: Cargo.toml
wormcode_inst/: Cargo.toml
wormcode_inst/src/: decode.rs  instruction.rs  lib.rs  operand.rs
wormcode_inst/src/instruction/: encoding.rs  intermediate.rs  tests.rs
wormcode_inst/src/instruction/encoding/: opcode0.rs  opcode1.rs  opcode2.rs  opcode3.rs  tests.rs
wormcode_inst/src/operand/: mode.rs  tests.rs
wormcode_inst/src/operand/mode/: tests.rs
wormcode_prng/: Cargo.toml
wormcode_prng/src/: lib.rs
wormcode_sim/: Cargo.toml
wormcode_sim/src/: lib.rs  sim.rs
wormcode_space/: Cargo.toml
wormcode_space/src/: coords.rs  lib.rs  space.rs
wormcode_space/src/space/: tests.rs
wormcode_ui/: Cargo.toml
wormcode_ui/src/: lib.rs  ui.rs
wormcode_vm/: Cargo.toml
wormcode_vm/src/: b.rs  decode.rs  instruction.rs  lib.rs  operand.rs
wormcode_vm/src/b/: tests.rs
wormcode_vm/src/instruction/: encoding.rs  tests.rs
wormcode_vm/src/instruction/encoding/: opcode0.rs  opcode1.rs  opcode2.rs  opcode3.rs  tests.rs
wormcode_vm/src/operand/: mode.rs  tests.rs
(+1 files in other folders)
