[package]
name = "wormcode_sim"
version = "0.1.0"
authors = ["Nate Wilcox <nejucomo+dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wormcode_asm]
path = "../wormcode_asm"

[dependencies.wormcode_bits]
path = "../wormcode_bits"

[dependencies.wormcode_cell]
path = "../wormcode_cell"

[dependencies.wormcode_prng]
path = "../wormcode_prng"

[dependencies.wormcode_space]
path = "../wormcode_space"

[dependencies.wormcode_ui]
path = "../wormcode_ui"
