[package]
name = "wormcode_ui"
version = "0.1.0"
authors = ["Nate Wilcox <nejucomo+dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wormcode_cell]
path = "../wormcode_cell"

[dependencies.wormcode_space]
path = "../wormcode_space"
